# pdd_crawler

./: .gitignore  Dockerfile  README.md  _parse_xlsx.py  clean_shop_data.py  docker-compose.yml  pyproject.toml  start.sh  start_web_background.ps1  test_connection.py
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-imports.txt
.sisyphus/notepads/pdd-crawler/: learnings.md
.sisyphus/plans/: pdd-crawler.md
docker/chrome/: Dockerfile  entrypoint.sh  proxy.py
docs/: example_4001.md  example_4002.md  销售主题分析_渠道_20260324154901_149810759_1.xlsx
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  cookies.ts  crawl.ts  data.ts
frontend/src/components/: AddRowModal.tsx  AddRowModal.tsx.bak  Layout.tsx  Modal.tsx  QrModal.tsx  Toast.tsx
frontend/src/pages/: CookiePage.tsx  CrawlPage.tsx  DataPage.tsx
frontend/src/store/: session.ts  toast.ts
frontend/src/types/: index.ts
src/pdd_crawler/: __init__.py  __main__.py  bill_exporter.py  chrome_pool.py  config.py  cookie_manager.py  crawl4ai_bill_exporter.py  home_scraper.py  shop_manager.py
src/pdd_crawler/web/: __init__.py  app.py  clean_api.py  cookie_api.py  data_api.py  data_store.py  db.py  deps.py  export_xlsx.py  jst_api.py  jst_import.py  run.py  session_store.py  shop_api.py  task_api.py
src/pdd_crawler/web/static/: index.html
src/pdd_crawler/web/static/assets/: index-BFVLUKly.css  index-Bjl-R0QV.js
tests/: spike_crawl4ai.py  test_cookie_manager.py  test_jst_import.py  test_smoke.py
