[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdd_crawler"
version = "0.1.0"
description = "Crawler for PDD electricity bills"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Author", email = "author@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "crawl4ai>=0.7.0",
    "playwright>=1.40",
    "pytest>=7.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.6.0",
    "python-multipart>=0.0.6",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pdd_crawler = "pdd_crawler.__main__:main"
pdd_web = "pdd_crawler.web.run:main"
